# pse_homework

./: CMakeLists.txt  README.md
app/src/: main.cpp
include/: boid.h  reynold.h
lib/boid/include/: boid.h
lib/boid/src/: boid.cpp
lib/visualizer/src/: visualizer.py
libs/: CMakeLists.txt  boid.cpp  reynold.cpp
src/: CMakeLists.txt  main.cpp  visualizer.py
test/: CMakeLists.txt  test.cpp
